working on hero image

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       </form>
     </div>
   </nav>
+  <div class="hero-image">
+    <img class="img-fluid" src="images/dentist-picture.jpg" alt="dentist office">
+  </div>
 
   <!-- Photo by Michael Browning on Unsplash -->
 
