added google fonts

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+  <!-- My Stylesheet -->
+  <link rel="stylesheet" href="css/style.css">
   <title>Smiles Dentistry</title>
 </head>
 <body>
@@ -30,9 +32,16 @@
       </form>
     </div>
   </nav>
-  <div class="hero-image">
-    <img class="img-fluid" src="images/dentist-picture.jpg" alt="dentist office">
-  </div>
+
+  <!-- Hero Image Header -->
+  <section>
+    <div class="container hero">
+      <h1>Call for a Free Check-up</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <button class="btn btn-success" type="button" name="button">Learn More</button>
+    </div>
+  </section>
+
 
   <!-- Photo by Michael Browning on Unsplash -->
 
