added the background image and main header plus button

--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
   </nav>
 
   <!-- Hero Image Header -->
-  <section>
-    <div class="container hero">
-      <h1>Call for a Free Check-up</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <button class="btn btn-success" type="button" name="button">Learn More</button>
+  <section class="bg-overlay hero">
+    <div class="container">
+      <h1 class="main-header">Call for a Free Check-up</h1>
+      <button class="btn-lg btn-success" type="button" name="button">Learn More</button>
     </div>
   </section>
 
