--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <!-- ml-auto allows menu items to align right -->
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home</a>
         </li>
@@ -34,6 +35,7 @@
   </nav>
 
   <!-- Hero Image Header -->
+  <!-- Photo by Michael Browning on Unsplash -->
   <section class="bg-overlay hero">
     <div class="container">
       <h1 class="main-header">Call for a Free Check-up</h1>
@@ -41,8 +43,21 @@
     </div>
   </section>
 
+  <!-- Services section -->
+  <section>
+    <div class="row">
+      <div class="col-4">
+        <p>I'm a column</p>
+      </div>
+      <div class="col-4">
+        <p>I'm a column</p>
+      </div>
+      <div class="col-4">
+        <p>I'm a column</p>
+      </div>
+    </div>
+  </section>
 
-  <!-- Photo by Michael Browning on Unsplash -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
