working on services section and added in cards

--- a/index.html
+++ b/index.html
@@ -27,36 +27,64 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">About</a>
         </li>
-      </ul>
-      <form class="form-inline">
-        <button class="btn btn-success" type="button" name="button">Contact</button>
-      </form>
-    </div>
-  </nav>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Services</a>
+          </li
+        </ul>
+        <form class="form-inline">
+          <button class="btn btn-success" type="button" name="button">Contact</button>
+        </form>
+      </div>
+    </nav>
 
-  <!-- Hero Image Header -->
-  <!-- Photo by Michael Browning on Unsplash -->
-  <section class="bg-overlay hero">
-    <div class="container">
-      <h1 class="main-header">Call for a Free Check-up</h1>
-      <button class="btn-lg btn-success" type="button" name="button">Learn More</button>
-    </div>
-  </section>
+    <!-- Hero Image Header -->
+    <!-- Photo by Michael Browning on Unsplash -->
+    <section class="bg-overlay hero">
+      <div class="container">
+        <h1 class="main-header">Call for a Free Check-up</h1>
+        <button class="btn-lg btn-success" type="button" name="button">Learn More</button>
+      </div>
+    </section>
 
-  <!-- Services section -->
-  <section>
-    <div class="row">
-      <div class="col-4">
-        <p>I'm a column</p>
+    <!-- Services section -->
+    <section>
+      <div class="services-header">
+        <h2>Services</h2>
       </div>
-      <div class="col-4">
-        <p>I'm a column</p>
+    </section>
+
+    <section class="container">
+      <div class="row">
+
+        <div class="col-4 card" style="width: 20rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+
+        <div class="col-4 card" style="width: 20rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+
+        <div class="col-4 card" style="width: 20rem;">
+          <img class="card-img-top" src="..." alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
       </div>
-      <div class="col-4">
-        <p>I'm a column</p>
-      </div>
-    </div>
-  </section>
+
+    </section>
 
 
   <!-- Optional JavaScript -->
