working on the columns section of the page - need to get 3 column in large and tablet and stacked in small screen sizes

--- a/index.html
+++ b/index.html
@@ -56,35 +56,31 @@
     <section class="container">
       <div class="row">
 
-        <div class="col-4 card" style="width: 20rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="col-xl-4 col-md-12 card m-3">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h4 class="card-title">Cleanings</h4>
+            <p class="card-text">We have a team of great dental hygienists ready to serve you. Our hygienists are fully licensed will ensure you have a great visit.</p>
           </div>
         </div>
 
-        <div class="col-4 card" style="width: 20rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="col-xl-4 col-md-12 card m-3">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h4 class="card-title">Fillings</h4>
+            <p class="card-text">Have a cavity that needs filling?  We offer state-of-the-art fillings to ensure that your teeth look and feel great.</p>
+
           </div>
         </div>
 
-        <div class="col-4 card" style="width: 20rem;">
-          <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="col-xl-4 col-md-12 card m-3">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h4 class="card-title">Whitening</h4>
+            <p class="card-text">Need to polish up those pearl whites?  We utilize our patented WhiteTek whitening system to ensure that your smile looks great!</p>
           </div>
         </div>
       </div>
 
     </section>
+
 
 
   <!-- Optional JavaScript -->
