--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <section class="container">
       <div class="row">
 
-        <div class="col-xl-4 col-md-12 card m-3">
+        <div class="col  card m-3">
           <div class="card-body">
             <h4 class="card-title">Cleanings</h4>
             <p class="card-text">We have a team of great dental hygienists ready to serve you. Our hygienists are fully licensed will ensure you have a great visit.</p>
           </div>
         </div>
 
-        <div class="col-xl-4 col-md-12 card m-3">
+        <div class="col card m-3">
           <div class="card-body">
             <h4 class="card-title">Fillings</h4>
             <p class="card-text">Have a cavity that needs filling?  We offer state-of-the-art fillings to ensure that your teeth look and feel great.</p>
@@ -71,7 +71,7 @@
           </div>
         </div>
 
-        <div class="col-xl-4 col-md-12 card m-3">
+        <div class="col card m-3">
           <div class="card-body">
             <h4 class="card-title">Whitening</h4>
             <p class="card-text">Need to polish up those pearl whites?  We utilize our patented WhiteTek whitening system to ensure that your smile looks great!</p>
