--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div>
     </section>
 
-   <!-- Note:  I was having issues with the cards not laying out in three column layout in large screen.  Issue was resolved by putting a div around each card with col-md-4.  I needed one more div to surround the card.  Solution was found by looking at source code from https://getbootstrap.com/docs/4.4/examples/album/ -->
-    <section class="container">
+    <!-- Note:  I was having issues with the cards not laying out in three column layout in large screen.  Issue was resolved by putting a div around each card with col-md-4.  I needed one more div to surround the card.  Solution was found by looking at source code from https://getbootstrap.com/docs/4.4/examples/album/ -->
+    <section class="container services-cards">
       <div class="row">
 
         <div class="col-md-4">
@@ -99,12 +99,25 @@
       </div>
     </section>
 
-    section
+    <section>
+      <div class="">
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-</html>
+
+        <div class="">
+
+        </div>
+        <div class="">
+
+        </div>
+        <div class="">
+
+        </div>
+      </div>
+    </section>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </body>
+  </html>
