added about section and updated color scheme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- ml-auto allows menu items to align right -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="mr-2 nav-link" href="#">About</a>
+          <a class="mr-2 nav-link" href="#about">About</a>
         </li>
         <li class="nav-item active">
           <a class="mr-2 nav-link" href="#services">Services</a>
@@ -54,11 +54,44 @@
       </div>
     </section>
 
+    <!-- ABOUT SECTION -->
+    <section id="about">
+      <div class="about-header">
+        <h2>About Us</h2>
+      </div>
+
+    </section>
+
+    <section class="about-content">
+      <div class="card">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <img src="images/about-image.jpg" class="img-fluid" alt="Picture of dentist office">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h4>Our Story</h4>
+              <p class="card-text">Founded in 1994 by Dr. Bob Vance, Smiles Dentistry has always had a "customer-first" approach.  After years of serving the Charlotte community out of one location, Smiles Dentistry expanded to a second location in 2018. </p>
+              <p>We are full-service dental office an we specialize in a number of different services including:</p>
+              <ul>
+                <li>Braces</li>
+                <li>Cleanings</li>
+                <li>Root Canals</li>
+                <li>Cosmetic Dentistry</li>
+              </ul>
+              <p><em>"Quality service with for your smile.""</em></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Services section -->
     <section id="services">
       <div class="services-header">
         <h2>Services</h2>
       </div>
+
     </section>
 
     <!-- Note:  I was having issues with the cards not laying out in three column layout in large screen.  Issue was resolved by putting a div around each card with col-md-4.  I needed one more div to surround the card.  Solution was found by looking at source code from https://getbootstrap.com/docs/4.4/examples/album/ -->
