made changes to footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </li
         </ul>
         <form class="form-inline">
-          <button class="mr-2 btn" type="button" name="button">Contact</button>
+          <button class="mr-2 btn" type="button" name="button" href="#contact">Contact</button>
         </form>
       </div>
     </nav>
@@ -57,7 +57,7 @@
     <!-- ABOUT SECTION -->
     <section id="about">
       <div class="about-header">
-        <h2>About Us</h2>
+        <h1>About Us</h1>
       </div>
 
     </section>
@@ -79,7 +79,7 @@
                 <li>Root Canals</li>
                 <li>Cosmetic Dentistry</li>
               </ul>
-              <p><em>"Quality service with for your smile.""</em></p>
+              <p class="text-center"><em>"Quality service with for your smile.""</em></p>
             </div>
           </div>
         </div>
@@ -89,7 +89,7 @@
     <!-- Services section -->
     <section id="services">
       <div class="services-header">
-        <h2>Services</h2>
+        <h1>Services</h1>
       </div>
 
     </section>
@@ -133,7 +133,7 @@
     <!-- TESTIMONIALS -->
     <section id="testimonials" class="testimonials">
       <div class="testimonials-header">
-        <h2>Testimonials</h2>
+        <h1>Testimonials</h1>
       </div>
 
     <div class="row">
@@ -177,21 +177,55 @@
 
   </section>
 
-  <footer>
+  <!-- CONTACT SECTION -->
+  <section id="contact">
+    <div class="contact-header">
+      <h1>Contact Us</h1>
+    </div>
+
+  </section>
+
+  <section class="container services-cards">
     <div class="row">
 
       <div class="col-md-4">
+        <i class="fas fa-tooth"></i>
         <div class=" card m-3">
           <div class="card-body">
-            <h4 class="card-title text-center">Locations</h4>
             <p class="card-text text-center">28193 New Cut Road </br>
               Charlotte, NC 29134</p>
-              <p class="card-text text-center">3948 Radison Avenue </br>
-                Charlotte, NC 29134</p>
-              </div>
-            </div>
+            <p class="text-center">(767) 645-3455</p>
           </div>
+        </div>
+      </div>
 
+      <div class="col-md-4">
+        <div class="card m-3">
+          <div class="card-body">
+            <p class="card-text text-center">4843 Farmingham Street </br>
+              Charlotte, NC 29134</p>
+              <p class="text-center">(767) 643-3954</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 ">
+        <div class="card m-3">
+          <div class="card-body">
+            <p class="card-text text-center">5748 Blue Avenue Suite 500 </br>
+              Charlotte, NC 29134</p>
+              <p class="text-center">(767) 623-4914</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+
+
+  <footer>
+    <div class="row">
           <div class="col-md-4">
             <div class="card m-3">
               <div class="card-body">
@@ -199,20 +233,6 @@
                 <div class="text-center">
                   <i class="fa fa-facebook-square fa-3x icons"></i>
                   <i class="fa fa-twitter-square fa-3x icons"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4 ">
-            <div class="card m-3">
-              <div class="card-body">
-                <h4 class="card-title text-center">Newsletter</h4>
-                <div class="input-group mt-5">
-                  <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's username" aria-describedby="button-addon2">
-                  <div class="input-group-append">
-                    <button class="btn btn-success" type="button" id="button-addon2">Sign-Up</button>
-                  </div>
                 </div>
               </div>
             </div>
