--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </li
         </ul>
         <form class="form-inline">
-          <button class="mr-2 btn" type="button" name="button" href="#contact">Contact</button>
+          <a href="#contact"><button class="mr-2 btn" type="button" name="button" >Contact</button></a>
         </form>
       </div>
     </nav>
@@ -49,8 +49,8 @@
     <!-- Photo by Michael Browning on Unsplash -->
     <section class="bg-overlay hero">
       <div class="container hero-content">
-        <h1 class="main-header">Call for a Free Check-up</h1>
-        <button class="btn btn-lg" type="button" name="button">Learn More</button>
+        <h1 class="main-header">Schedule a Free Check-up</h1>
+        <a href="#contact"><button class="btn btn-lg" type="button" name="button">Learn More</button></a>
       </div>
     </section>
 
@@ -132,7 +132,7 @@
 
     <!-- TESTIMONIALS -->
     <section id="testimonials" class="testimonials">
-      <div class="testimonials-header">
+      <div class="text-center testimonials-header">
         <h1>Testimonials</h1>
       </div>
 
@@ -225,19 +225,10 @@
 
 
   <footer>
-    <div class="row">
-          <div class="col-md-4">
-            <div class="card m-3">
-              <div class="card-body">
-                <h4 class="card-title text-center">Let's Connect</h4>
-                <div class="text-center">
-                  <i class="fa fa-facebook-square fa-3x icons"></i>
-                  <i class="fa fa-twitter-square fa-3x icons"></i>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="text-center">
+            <a href="https://www.facebook.com/">  <i class="fa fa-facebook-square fa-3x icons"></i></a>
 
+                  <i class="fa fa-twitter-square fa-3x icons"></i>
         </div>
 
       </footer>
