added icons and made other stylist changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-dark">
     <!-- Logo image created using canva -->
     <a class="navbar-brand" href="#">
-    <img  src="images/smiles-logo.png" height="45px" alt="Logo that says smiles dentistry with small white tooth icon" >
+      <img  src="images/smiles-logo.png" height="45px" alt="Logo that says smiles dentistry with small white tooth icon" >
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
     <section class="bg-overlay hero">
       <div class="container hero-content">
         <h1 class="main-header">Schedule a Free Check-up</h1>
-        <a href="#contact"><button class="btn btn-lg" type="button" name="button">Learn More</button></a>
+        <a href="#contact"><button class="btn btn-lg hero-btn" type="button" name="button">Learn More</button></a>
       </div>
     </section>
 
@@ -99,9 +99,12 @@
       <div class="row">
 
         <div class="col-md-4">
-          <i class="fas fa-tooth"></i>
-          <div class=" card m-3">
+          <div>
+            <i class="fas fa-tooth services-icon"></i>
+          </div>
+          <div class="card m-3">
             <div class="card-body">
+
               <h4 class="card-title text-center">Cleanings</h4>
               <p class="card-text">We have a team of great dental hygienists ready to serve you. Our hygienists are fully licensed will ensure you have a great visit.</p>
             </div>
@@ -136,102 +139,114 @@
         <h1>Testimonials</h1>
       </div>
 
-    <div class="row">
+      <div class="row">
 
-      <div class="col-md-4">
-        <div class=" card m-4">
-          <div class="card-body">
-            <!-- <h4 class="card-title text-title">Cleanings</h4> -->
-            <!-- <p class="card-text">We have a team of great dental hygienists ready to serve you. Our hygienists are fully licensed will ensure you have a great visit.</p> -->
-            <div>
-            <p><i>"I've been coming to Smiles Dentistry for over 10 years and they always do a great job! Dr. Smith and his team offer top-notch service!"</i></p>
-            <p class="testimonial-name">- Janet</p>
+        <div class="col-md-4">
+          <div class=" card m-4">
+            <div class="card-body">
+              <!-- <h4 class="card-title text-title">Cleanings</h4> -->
+              <!-- <p class="card-text">We have a team of great dental hygienists ready to serve you. Our hygienists are fully licensed will ensure you have a great visit.</p> -->
+              <div>
+                <p><i>"I've been coming to Smiles Dentistry for over 10 years and they always do a great job! Dr. Smith and his team offer top-notch service!"</i></p>
+                <p class="testimonial-name">- Janet</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
-      <div class="col-md-4">
-        <div class="card m-4">
-          <div class="card-body">
-            <div>
-            <p><i>"The doctors and staff do a great job overall.  They helped my 10 year old son overcome his fear of the dentist!  Thank you Smiles Dentistry!"</i></p>
-            <p class="testimonial-name">- Monica</p>
+        <div class="col-md-4">
+          <div class="card m-4">
+            <div class="card-body">
+              <div>
+                <p><i>"The doctors and staff do a great job overall.  They helped my 10 year old son overcome his fear of the dentist!  Thank you Smiles Dentistry!"</i></p>
+                <p class="testimonial-name">- Monica</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
 
-      <div class="col-md-4 ">
-        <div class="card m-4">
-          <div class="card-body">
-            <div >
-            <p><i>"I couldn't say enough great things about Smiles Dentistry.  They have taken care of the dental needs of my family for years."</i></p>
-            <p class="testimonial-name">- Steven</p>
-          </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-  </section>
-
-  <!-- CONTACT SECTION -->
-  <section id="contact">
-    <div class="contact-header">
-      <h1>Contact Us</h1>
-    </div>
-
-  </section>
-
-  <section class="container services-cards">
-    <div class="row">
-
-      <div class="col-md-4">
-        <i class="fas fa-tooth"></i>
-        <div class=" card m-3">
-          <div class="card-body">
-            <p class="card-text text-center">28193 New Cut Road </br>
-              Charlotte, NC 29134</p>
-            <p class="text-center">(767) 645-3455</p>
+        <div class="col-md-4 ">
+          <div class="card m-4">
+            <div class="card-body">
+              <div >
+                <p><i>"I couldn't say enough great things about Smiles Dentistry.  They have taken care of the dental needs of my family for years."</i></p>
+                <p class="testimonial-name">- Steven</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4">
-        <div class="card m-3">
-          <div class="card-body">
-            <p class="card-text text-center">4843 Farmingham Street </br>
-              Charlotte, NC 29134</p>
-              <p class="text-center">(767) 643-3954</p>
-          </div>
-        </div>
+
+    </section>
+
+    <!-- CONTACT SECTION -->
+    <section id="contact">
+      <div class="contact-header">
+        <h1>Contact Us</h1>
       </div>
 
-      <div class="col-md-4 ">
-        <div class="card m-3">
-          <div class="card-body">
-            <p class="card-text text-center">5748 Blue Avenue Suite 500 </br>
-              Charlotte, NC 29134</p>
-              <p class="text-center">(767) 623-4914</p>
+    </section>
+
+    <section class="container services-cards">
+      <div class="row">
+
+        <div class="col-md-4">
+          <div class=" card m-3">
+            <div class="contact-icon">
+              <span><i class="fa fa-home" aria-hidden="true"
+              style="text-align: center; border-radius: 50%; color:#000; font-size: 1.5em; padding:20px;"></i></span>
+            </div>
+            <div class="card-body">
+              <p class="card-text text-center">28193 New Cut Road </br>
+                Charlotte, NC 29134</p>
+                <p class="text-center">(767) 645-3455</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-    </div>
+          <div class="col-md-4">
+            <div class="card m-3">
+              <div class="contact-icon">
+                <span><i class="fa fa-home" aria-hidden="true"
+                style="text-align: center; border-radius: 50%; color:#000; font-size: 1.5em; padding:20px;"></i></span>
+              </div>
+              <div class="card-body">
+                <p class="card-text text-center">4843 Farmingham Street </br>
+                  Charlotte, NC 29134</p>
+                  <p class="text-center">(767) 643-3954</p>
+                </div>
+              </div>
+            </div>
 
-  </section>
+            <div class="col-md-4 ">
+              <div class="card m-3">
+                <div class="contact-icon">
+                  <span><i class="fa fa-home" aria-hidden="true"
+                  style="text-align: center; border-radius: 50%; color:#000; font-size: 1.5em; padding:20px;"></i></span>
+                </div>
+                <div class="card-body">
+                  <p class="card-text text-center">5748 Blue Avenue  </br>
+                    Charlotte, NC 29134</p>
+                    <p class="text-center">(767) 623-4914</p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+          </section>
 
 
-  <footer>
-    <div class="text-center">
-            <a href="https://www.facebook.com/">  <i class="fa fa-facebook-square fa-3x icons"></i></a>
+          <footer>
+            <div class="text-center">
+              <a href="https://www.facebook.com/">  <i class="fa fa-facebook-square fa-3x icons"></i></a>
 
-                  <i class="fa fa-twitter-square fa-3x icons"></i>
-        </div>
+              <a href="https://twitter.com/"></a>
+              <i class="fa fa-twitter-square fa-3x icons"></i>
+            </div>
 
-      </footer>
+          </footer>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
